# mag3-react-prak

./: .gitignore  README.md
jwt-frontend/: package-lock.json
jwt-frontend/src/: App.js  index.js
jwt-frontend/src/pages/: Auth.js  Reg.js  UserPage.js
jwt-frontend/src/services/: api.js
jwt_backend/: pyproject.toml
jwt_backend/jwt_backend/: api_models.py  app.py  database.py  models.py  utils.py
jwt_frontend/: package.json
jwt_frontend/src/: App.js
jwt_frontend/src/services/: api.js
